--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "",
   "private": true,
   "dependencies": {
+
     "highlight.js": "^9.13.1",
     "react-grid-layout": "^0.16.6",
     "react-icons": "^2.2.7",
-    "reakit": "^0.11.2"
+    "reakit": "^0.11.2",
+
+    "expo": "~37.0.3",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-paper": "^3.8.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "intl-messageformat": "^2.2.0",
     "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cljs-test": "^0.1.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
     "shadow-cljs": "^2.8.40",
     "showdown": "^1.8.7"
   },
